fix bug for html